--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
 plugins {
     id 'java'
     id 'org.jetbrains.intellij' version '0.5.0'
+    id 'org.jetbrains.kotlin.jvm' version '1.4.10'
 }
 
 wrapper {
@@ -14,7 +15,9 @@ wrapper {
 }
 
 group 'com.slackow'
-version '1.0-SNAPSHOT'
+version '1.0'
+
+sourceCompatibility = 1.8
 
 apply plugin: 'java'
 apply plugin: 'org.jetbrains.intellij'
@@ -24,11 +27,16 @@ compileJava {
     sourceCompatibility = targetCompatibility = '1.8'
 }
 
+compileKotlin {
+    kotlinOptions.jvmTarget = '1.8'
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
     antlr("org.antlr:antlr4:4.7.2") {
         exclude group: 'com.ibm.icu', module: 'icu4j'
     }
