added test files added Gson as a dependency multiline commands do not have to begin on a new line anymore added import and as as new keywords
import statements can now be included at the top

--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,9 @@ repositories {
     mavenCentral()
 }
 
+
 dependencies {
+    implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
     antlr("org.antlr:antlr4:4.7.2") {
         exclude group: 'com.ibm.icu', module: 'icu4j'
